# config2resume

./: .gitignore  README.md  pyproject.toml  requirements.txt
config2resume/: cli.py
config2resume/util/: parser.py
src/: .gitignore  cli.py
src/config/: sample_config.yaml  sample_config_ats.yaml
src/templates/: sample_template.html  sample_template_ats.html
src/util/: resume_generator.py
