[tool.poetry]
name = "config2resume"
version = "0.1.0"
description = ""
authors = ["Prateek Tripathi <ptripathi@mt.iitr.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^62.1"
jinja2 = "^3.1.4"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
